[package]
name = "infrablockchain-service"
rust-version = "1.60"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Client
sc-authority-discovery = { path = "../../../substrate/client/authority-discovery" }
babe = { package = "sc-consensus-babe", path = "../../../substrate/client/consensus/babe" }
beefy = { package = "sc-consensus-beefy", path = "../../../substrate/client/consensus/beefy" }
grandpa = { package = "sc-consensus-grandpa", path = "../../../substrate/client/consensus/grandpa" }
mmr-gadget = { path = "../../../substrate/client/merkle-mountain-range" }
sp-mmr-primitives = { path = "../../../substrate/primitives/merkle-mountain-range" }
sc-block-builder = { path = "../../../substrate/client/block-builder" }
sc-chain-spec = { path = "../../../substrate/client/chain-spec" }
sc-client-api = { path = "../../../substrate/client/api" }
sc-client-db = { path = "../../../substrate/client/db" }
sc-consensus = { path = "../../../substrate/client/consensus/common" }
sc-consensus-slots = { path = "../../../substrate/client/consensus/slots" }
sc-executor = { path = "../../../substrate/client/executor" }
sc-network = { path = "../../../substrate/client/network" }
sc-network-common = { path = "../../../substrate/client/network/common" }
sc-network-sync = { path = "../../../substrate/client/network/sync" }
sc-transaction-pool = { path = "../../../substrate/client/transaction-pool" }
sc-transaction-pool-api = { path = "../../../substrate/client/transaction-pool/api" }
sc-sync-state-rpc = { path = "../../../substrate/client/sync-state-rpc" }
sc-keystore = { path = "../../../substrate/client/keystore" }
sc-basic-authorship = { path = "../../../substrate/client/basic-authorship" }
sc-offchain = { path = "../../../substrate/client/offchain" }
sc-sysinfo = { path = "../../../substrate/client/sysinfo" }
service = { package = "sc-service", path = "../../../substrate/client/service", default-features = false }
telemetry = { package = "sc-telemetry", path = "../../../substrate/client/telemetry" }

# Primitives
sp-authority-discovery = { path = "../../../substrate/primitives/authority-discovery" }
consensus_common = { package = "sp-consensus", path = "../../../substrate/primitives/consensus/common" }
beefy-primitives = { package = "sp-consensus-beefy", path = "../../../substrate/primitives/consensus/beefy" }
grandpa_primitives = { package = "sp-consensus-grandpa", path = "../../../substrate/primitives/consensus/grandpa" }
sp-inherents = { path = "../../../substrate/primitives/inherents" }
sp-keyring = { path = "../../../substrate/primitives/keyring" }
sp-api = { path = "../../../substrate/primitives/api" }
sp-block-builder = { path = "../../../substrate/primitives/block-builder" }
sp-blockchain = { path = "../../../substrate/primitives/blockchain" }
sp-core = { path = "../../../substrate/primitives/core" }
sp-io = { path = "../../../substrate/primitives/io" }
sp-keystore = { path = "../../../substrate/primitives/keystore" }
sp-offchain = { package = "sp-offchain", path = "../../../substrate/primitives/offchain" }
sp-runtime = { path = "../../../substrate/primitives/runtime" }
sp-session = { path = "../../../substrate/primitives/session" }
sp-storage = { path = "../../../substrate/primitives/storage" }
sp-transaction-pool = { path = "../../../substrate/primitives/transaction-pool" }
pallet-transaction-payment = { path = "../../../substrate/frame/transaction-payment" }
pallet-system-token-tx-payment = { path = "../../../substrate/frame/transaction-payment/system-token-tx-payment" }
sp-timestamp = { path = "../../../substrate/primitives/timestamp" }
sp-consensus-babe = { path = "../../../substrate/primitives/consensus/babe" }
sp-state-machine = { path = "../../../substrate/primitives/state-machine" }
sp-weights = { path = "../../../substrate/primitives/weights" }
sp-version = { path = "../../../substrate/primitives/version" }

# Pallets
pallet-babe = { path = "../../../substrate/frame/babe" }
pallet-im-online = { path = "../../../substrate/frame/im-online" }
pallet-staking = { path = "../../../substrate/frame/staking" }
pallet-transaction-payment-rpc-runtime-api = { path = "../../../substrate/frame/transaction-payment/rpc/runtime-api" }
frame-system = { path = "../../../substrate/frame/system" }

# Other
frame-system-rpc-runtime-api = { path = "../../../substrate/frame/system/rpc/runtime-api" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", path = "../../../substrate/utils/prometheus" }
frame-support = { path = "../../../substrate/frame/support" }
frame-benchmarking-cli = { path = "../../../substrate/utils/frame/benchmarking-cli" }
frame-benchmarking = { path = "../../../substrate/frame/benchmarking" }

# External Crates
futures = "0.3.21"
hex-literal = "0.4.1"
gum = { package = "tracing-gum", path = "../gum" }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.48"
kvdb = "0.13.0"
kvdb-rocksdb = { version = "0.19.0", optional = true }
parity-db = { version = "0.4.8", optional = true }
codec = { package = "parity-scale-codec", version = "3.6.1" }

async-trait = "0.1.57"
schnellru = "0.2.1"
log = "0.4.17"
is_executable = "1.0.1"

# Polkadot
infrablockchain-core-primitives = { path = "../../core-primitives" }
node-core-parachains-inherent = { path = "../core/parachains-inherent" }
infrablockchain-overseer = { path = "../overseer" }
parachain-primitives = { path = "../../parachain" }
primitives = { path = "../../primitives" }
node-primitives = { path = "../primitives" }
polkadot-rpc = { path = "../../rpc" }
node-subsystem = { path = "../subsystem" }
node-subsystem-util = { path = "../subsystem-util" }
node-subsystem-types = { path = "../subsystem-types" }
runtime-parachains = { path = "../../runtime/parachains" }
node-network-protocol = { path = "../network/protocol" }

# Runtimes
infra-relay-runtime = { path = "../../runtime/infra-relay", optional = true }
rococo-runtime = { path = "../../runtime/rococo", optional = true }

# Runtime Constants
infra-relay-runtime-constants = { path = "../../runtime/infra-relay/constants", optional = true }
rococo-runtime-constants = { path = "../../runtime/rococo/constants", optional = true }


# Subsystems
approval-distribution = { path = "../network/approval-distribution", optional = true }
availability-bitfield-distribution = { path = "../network/bitfield-distribution", optional = true }
availability-distribution = { path = "../network/availability-distribution", optional = true }
availability-recovery = { path = "../network/availability-recovery", optional = true }
collator-protocol = { path = "../network/collator-protocol", optional = true }
dispute-distribution = { path = "../network/dispute-distribution", optional = true }
gossip-support = { path = "../network/gossip-support", optional = true }
network-bridge = { path = "../network/bridge", optional = true }
node-collation-generation = { path = "../collation-generation", optional = true }
node-core-approval-voting = { path = "../core/approval-voting", optional = true }
node-core-av-store = { path = "../core/av-store", optional = true }
node-core-backing = { path = "../core/backing", optional = true }
node-core-bitfield-signing = { path = "../core/bitfield-signing", optional = true }
node-core-candidate-validation = { path = "../core/candidate-validation", optional = true }
node-core-chain-api = { path = "../core/chain-api", optional = true }
node-core-chain-selection = { path = "../core/chain-selection", optional = true }
node-core-dispute-coordinator = { path = "../core/dispute-coordinator", optional = true }
node-core-prospective-parachains = { path = "../core/prospective-parachains", optional = true }
node-core-provisioner = { path = "../core/provisioner", optional = true }
node-core-pvf = { path = "../core/pvf", optional = true }
node-core-pvf-checker = { path = "../core/pvf-checker", optional = true }
node-core-runtime-api = { path = "../core/runtime-api", optional = true }
statement-distribution = { path = "../network/statement-distribution", optional = true }

[dev-dependencies]
polkadot-test-client = { path = "../test/client" }
node-subsystem-test-helpers = { path = "../subsystem-test-helpers" }
env_logger = "0.9.0"
assert_matches = "1.5.0"
serial_test = "2.0.0"
tempfile = "3.2"

[features]
default = [ "db", "full-node" ]

db = [ "service/rocksdb" ]

full-node = [
	"kvdb-rocksdb",
	"parity-db",
	"approval-distribution",
	"availability-bitfield-distribution",
	"availability-distribution",
	"availability-recovery",
	"collator-protocol",
	"dispute-distribution",
	"gossip-support",
	"network-bridge",
	"node-collation-generation",
	"node-core-approval-voting",
	"node-core-av-store",
	"node-core-backing",
	"node-core-bitfield-signing",
	"node-core-candidate-validation",
	"node-core-chain-api",
	"node-core-chain-selection",
	"node-core-dispute-coordinator",
	"node-core-prospective-parachains",
	"node-core-provisioner",
	"node-core-pvf",
	"node-core-pvf-checker",
	"node-core-runtime-api",
	"statement-distribution",
]

# Configure the native runtimes to use.
rococo-native = [ "rococo-runtime", "rococo-runtime-constants" ]
infra-relay-native = [ "infra-relay-runtime", "infra-relay-runtime-constants" ]

runtime-benchmarks = [
	"frame-benchmarking-cli/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-babe/runtime-benchmarks",
	"pallet-im-online/runtime-benchmarks",
	"pallet-staking/runtime-benchmarks",
	"parachain-primitives/runtime-benchmarks",
	"primitives/runtime-benchmarks",
	"runtime-parachains/runtime-benchmarks",
	"polkadot-test-client/runtime-benchmarks",
	"rococo-runtime?/runtime-benchmarks",
	"sc-client-db/runtime-benchmarks",
	"service/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-babe/try-runtime",
	"pallet-im-online/try-runtime",
	"pallet-staking/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"runtime-parachains/try-runtime",
	"rococo-runtime?/try-runtime",
	"sp-runtime/try-runtime",
]
fast-runtime = [
	"rococo-runtime?/fast-runtime",
]

malus = [ "full-node" ]
runtime-metrics = [
	"runtime-parachains/runtime-metrics",
	"rococo-runtime?/runtime-metrics",
]
