[package]
name = "node-subsystem"
description = "Subsystem traits and message definitions and the generated overseer"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
infrablockchain-overseer = { path = "../overseer" }
node-subsystem-types = { path = "../subsystem-types" }
node-jaeger = { path = "../jaeger" }
