[package]
name = "infra-asset-link"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "XCM Asset Registry."

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# external
parity-scale-codec = { version = "3.6.1", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }

# primitives
sp-runtime = { path = "../../../substrate/primitives/runtime", default-features = false, features=["serde"] }
sp-std = { package = "sp-std", path = "../../../substrate/primitives/std", default-features = false }

# frames
frame-benchmarking = { path = "../../../substrate/frame/benchmarking", default-features = false, optional = true }
frame-support = { path = "../../../substrate/frame/support", default-features = false }
frame-system = { path = "../../../substrate/frame/system", default-features = false }
pallet-assets = { path = "../../../substrate/frame/assets", default-features = false }
pallet-balances = { path = "../../../substrate/frame/balances", default-features = false }

# xcm
xcm = { package = "staging-xcm", path = "..", default-features = false }
xcm-primitives = { path = "../xcm-primitives", default-features = false }

[dev-dependencies]

sp-core = { path = "../../../substrate/primitives/core", features=["serde"] }
sp-io = { path = "../../../substrate/primitives/io" }
xcm-simulator = { path = "../xcm-simulator" }
xcm-executor = { package = "staging-xcm-executor", path = "../xcm-executor" }
xcm-builder = { package = "staging-xcm-builder", path = "../xcm-builder" }
pallet-xcm = { path = "../pallet-xcm" }
infrablockchain-core-primitives = { path = "../../core-primitives", default-features = false }
runtime-parachains = { path = "../../runtime/parachains", default-features = false }
parachain-primitives = { path = "../../parachain", default-features = false }

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"sp-runtime/std",
	"sp-std/std",
	"pallet-assets/std",
	"pallet-balances/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"xcm-primitives/std",
	"xcm/std",
	"xcm-executor/std",
	"xcm-builder/std",
	"pallet-xcm/std",
	"infrablockchain-core-primitives/std",
	"runtime-parachains/std",
	"parachain-primitives/std",
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
