[package]
name = "xcm-primitives"
version = "0.0.1"
edition.workspace = true

[dependencies]
impl-trait-for-tuples = "0.2"
sp-std = { package = "sp-std", path = "../../../substrate/primitives/std", default-features = false }
sp-runtime = { path = "../../../substrate/primitives/runtime", default-features = false, features=["serde"] }
frame-support = { path = "../../../substrate/frame/support", default-features = false }

xcm = { package = "staging-xcm", path = "..", default-features = false }
xcm-executor = { package = "staging-xcm-executor", path = "../xcm-executor", default-features = false }

[features]
default = ["std"]
std = ["sp-std/std", "sp-runtime/std", "frame-support/std", "xcm/std", "xcm-executor/std"]
