[package]
name = "softfloat"
version = "1.0.0"
edition = "2021"
description = "Pure software floating-point implementation, with `const` and `no_std` support"
keywords = ["const", "soft", "softfloat", "float-point"]
categories = ["no-std"]
repository = "https://github.com/koute/softfloat"
license = "MIT OR Apache-2.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = [
    "derive",
    "max-encoded-len",
] }
scale-info = { version = "2.9.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.188", default-features = false, features = ["derive", "alloc"] }
# frame-support = { path = "../../frame/support", default-features = false }

[dev-dependencies]
cfg-if = "1"

[features]
default = ["std"]
std = []
